# cutter-py

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml  pyrightconfig.json
