[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]


[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
{% if cookiecutter.pre_commit == 'y' %}pre-commit = "*"{% endif %}

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | venv
  | build
  | node_modules
)/
'''

# Be compliant with PEP-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
